update and creatfunction user
